# 2025_fall_desktopassistant-

./: .gitignore  CMakeLists.txt  ClassDefine.h  POMODORO_IMPLEMENTATION.md  README.md  TwentyFoueGame.cpp  TwentyFourGame_GameInner.cpp  account.h  account_account.cpp  account_analysis.cpp  account_manager.cpp  account_safeCin.cpp  calculator.cpp  calculator.h  calculator_Calculator.cpp  draft.cpp  gui.cpp  main (1).cpp  main.cpp  reminder.h  reminder_diaries.cpp  reminder_notepad.cpp  reminder_passwords.cpp  reminder_ui.cpp  shouzhi.cpp  shouzhi.h  todolist_manager.cpp  ﻿TwentyFourGame.h
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
include/: TwentyFourGame.h  account.h  pomodoro.h  reminder.h  todolist.h
src/: main.cpp
src/account/: account_account.cpp  account_analysis.cpp  account_manager.cpp  account_safeCin.cpp
src/calculator/: calculator_Calculator.cpp  calculator_ExpressionEvaluator.cpp
src/game24/: TwentyFoueGame.cpp  TwentyFourGame_GameInner.cpp  game24.cpp
src/pomodoro/: pomodoro_manager.cpp
src/reminder/: reminder_diaries.cpp  reminder_notepad.cpp  reminder_passwords.cpp  reminder_ui.cpp
src/todolist/: todo.cpp  todolist_manager.cpp
杂项/: POMODORO_IMPLEMENTATION.md  UI_PREVIEW.md
